--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "ckeditor-build-with-simple-upload-provider-strapi": "^1.0.7",
+    "@ckeditor/ckeditor5-upload": "^28.0.0",
     "knex": "0.21.18",
     "sqlite3": "5.0.0",
     "strapi": "3.6.5",
